[package]
name = "warehouse_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pathfinding = "4.0"
env_logger = "0.10"
csv = "1.2"  # <-- 确保它在这里，而不是只在 [dev-dependencies]

[dev-dependencies]
# csv = "1.2"  # 可以从这里移走
plotters = "0.3"